vlib/v/checker/tests/interface_sameness_check_for_mutable_methods.vv
interface Interface {
mut:
	method() u32
}

struct St {}

fn (st St) method() int {
	panic('')
}

fn foo(_ Interface) {}

fn bar() {
	foo(St{})
}
